Guard check / Permission required to access Foreign Function API? #40